# sliceval

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml  stress_results.txt  stress_results.txtpytest
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
sliceval/: __init__.py  evaluator.py  metrics.py  report.py  slice.py
sliceval/discovery/: beam.py  tree.py
sliceval/integrations/: mlflow.py
sliceval/utils/: stats.py  validation.py
tests/: conftest.py  test_discovery_beam.py  test_evaluator.py  test_integration_mlflow.py  test_metrics.py  test_report.py  test_stress.py  test_validation.py  test_warnings.py
