[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sliceval"
version = "0.1.0"
description = "Slice-based model evaluation for ML engineers"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.0"]
plot = ["matplotlib>=3.4"]
scipy = ["scipy>=1.7"]
all = ["mlflow>=2.0", "matplotlib>=3.4", "scipy>=1.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
