[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sliceval"
version = "0.1.0"
description = "Slice-based model evaluation for ML engineers. Find where your model fails before production does."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kartikeya Mandhar"},
]
keywords = ["machine-learning", "evaluation", "slicing", "model-debugging", "mlflow", "sklearn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.0"]
plot = ["matplotlib>=3.4"]
scipy = ["scipy>=1.7"]
all = ["mlflow>=2.0", "matplotlib>=3.4", "scipy>=1.7"]

[project.urls]
Homepage = "https://github.com/kartikeyamandhar/sliceval"
Repository = "https://github.com/kartikeyamandhar/sliceval"
Issues = "https://github.com/kartikeyamandhar/sliceval/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]